Prevent shine effect from occurring on the member card image.  Fix z-index issues.

--- a/src/components/MemberCard/MemberCard.scss
+++ b/src/components/MemberCard/MemberCard.scss
@@ -34,6 +34,7 @@
         position: relative;
         width: 100px;
         height: 100px;
+        z-index: 1;
     }
     &:hover:after {
       animation: shine 3s ease-out;
